# planar-vibe

./: .gitignore  LICENSE  README.md  TODOs.md  face_balancer.md  index.html  layout-table-sample.html  metric-correlations.csv  metric-correlations.md  package.json  planar_all.dot  planar_train.dot  report.html  review.md  sperner.md
benchmark/: gd_collection.dot  gd_collection_coords.dot  named.dot  north.dot  planar_bipartite_2connected.dot  planar_quadrangulations.dot  rome.dot  sample_graphs.dot  sample_graphs_coords.dot  wiki.dot
docs/: PLAN_cpp.md  PLAN_python.md  agentic_layout.md  agentic_log.md  air.md  air_aug_compare.csv  air_aug_compare.md  air_ideas.md  airplus_current_idea_eval_report.md  airplus_current_idea_eval_results.json  airplus_edge_ideas.md  airplus_idea_eval_report.md  airplus_idea_eval_results.json  alignment.md  areagrad.md  ceg23_paper_check.md  ceg_paper_check.md  claude_log.md  gpt_log.md  metrics.md  (+17 more)
src-python/: PARITY_REPORT.md  PLAN.md  pyproject.toml
src-python/planarvibe/: __init__.py  alignment.py  benchmarks.py  geometry.py  graph.py  linear_algebra.py  metrics.py  planar_graph.py  planarity.py  preprocessing.py
src-python/planarvibe/layouts/: __init__.py  _balancer_common.py  air.py  anglebalancer.py  areagrad.py  ceg.py  claude.py  cleanair.py  edgebalancer.py  fabalancer.py  facebalancer.py  forcedir.py  fpp.py  gpt.py  impred.py  p3t.py  random_layout.py  reweight.py  schnyder.py  tutte.py
src-python/scripts/: apply_layout.py  compare_metrics.py  freeze_js_reference.py  js_driver.mjs  parity_check.py  run_parity_suite.py
(+195 files in other folders)
