[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "planarvibe"
version = "0.1.0"
description = "Python port of PlanarVibe geometric layout algorithms"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["planarvibe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
